# amos2024ws03-android-zero-instrumentation

./: .envrc  .gitignore  .gitmodules  README.md  REUSE.toml  flake.nix  generate_sbom.py  pyproject.toml
.devcontainer/: devcontainer.json  devcontainer.json.license
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  lint_build_test.yml  pull_request.yml  release.yml
Deliverables/sprint-01/: feature-board.tsv  imp-squared-backlog.tsv  team-logo.png.license
Deliverables/sprint-02/: amos2024ws03-feature-board - Board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-03/: feature-board - Board.tsv  feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-04/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-05/: amos2024ws03-feature-board - Board.tsv  feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-06/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-07/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-08/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-09/: feature-board.tsv  imp-squared-backlog.tsv
Deliverables/sprint-10/: feature-board.tsv  (+1 more)
Documentation/: .gitignore  README.md  build.gradle  code_components.excalidraw  runtime_components.excalidraw  settings.gradle.kts  usecases-demo.md
frontend/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
nix/: bash-configs.nix  docker-helpers.nix  overlay-module.nix
rust/: .gitignore  Cargo.toml  README.md  rustfmt.toml
rust/.cargo/: config.toml
rust/aya-wrapper/: Cargo.toml
rust/aya-wrapper/src/: lib.rs
rust/aya-wrapper/src/maps/: mod.rs  ring_buf.rs
rust/aya-wrapper/src/programs/: mod.rs  xdp.rs
rust/backend/: Cargo.toml  build.rs
rust/backend/common/: Cargo.toml
rust/backend/common/src/: lib.rs
rust/backend/daemon/: Cargo.toml  build.rs
rust/backend/daemon/src/: .gitignore  collector.rs  configuration.rs  constants.rs  counter.rs  ebpf_utils.rs  features.rs  helpers.rs  jni_reference_feature.rs  lib.rs  main.rs  map_collectors.rs  mocked_filesystem.rs  procfs_utils.rs  server.rs  symbols.rs  symbols_helpers.rs  symbols_stuff.rs  symbols_stuff_helpers.rs  sys_sendmsg_feature.rs  utils.rs  vfs_write_feature.rs
rust/backend/daemon/src/collector/: aggregator.rs  event_dipatcher.rs  event_dispatcher.rs  mod.rs  ring_buf.rs  supervisor.rs  time_series.rs
rust/backend/daemon/src/features/: blocking.rs  file_descriptor_change.rs  garbage_collect.rs  garbage_collection_feature.rs  jni_reference_feature.rs  jni_references.rs  mod.rs  signal.rs  sys_fd_tracking_feature.rs  sys_sendmsg_feature.rs  sys_sigquit_feature.rs  vfs_write_feature.rs  write.rs
rust/backend/daemon/src/filesystem/: memory.rs  mod.rs  normal.rs
rust/backend/daemon/src/registry/: mod.rs  pinning.rs  single_owner.rs  typed_ringbuf.rs
rust/backend/daemon/src/symbols/: actors.rs  index.rs  mod.rs  symbolizer.rs  walking.rs
rust/backend/daemon/tests/: base.rs
rust/backend/ebpf/: Cargo.toml  README.md  rust-toolchain.toml
rust/backend/ebpf-test/: Cargo.toml  build.rs
rust/backend/ebpf-test/tests/: prog_test_run.rs
rust/backend/ebpf/src/: detect_blocking_main.rs  garbage_collection.rs  jni_references.rs  lib.rs  main.rs  sys_fd_tracking.rs  sys_sendmsg.rs  sys_sigquit.rs  sys_write.rs  vfs_tracing.rs  vfs_write.rs
rust/backend/src/: configuration.rs  constants.rs  dummy_functions.rs  ebpf_info.rs  ebpf_utils.rs  helpers.rs  main.rs  main_helpers.rs  server.rs
rust/backend_test_client/: Cargo.toml
rust/backend_test_client/src/: main.rs
rust/client/: Cargo.toml  client.cdx.json  uniffi-bindgen.rs
rust/client/src/: bindings.rs  client.rs  lib.rs  main.rs
rust/client/tests/: base.rs
rust/example/: Cargo.toml  build.rs  example.cdx.json
rust/example-common/: Cargo.toml  example-common.cdx.json
rust/example-common/src/: lib.rs
rust/example-ebpf/: Cargo.toml  build.rs  example-ebpf.cdx.json
rust/example-ebpf/.cargo/: config.toml
rust/example-ebpf/src/: lib.rs  main.rs
rust/example/src/: counter.rs  main.rs
rust/garbage-collection/: Cargo.toml  README.md
rust/garbage-collection/src/: btf.rs  lib.rs  parser.rs  read.rs
rust/garbage-collection/src/parse/: field.rs  mod.rs  namespace.rs  ty.rs
rust/playground/ebpf-refactored/: Cargo.toml  README.md  build.rs
rust/playground/ebpf-refactored/.cargo/: config.toml
rust/playground/ebpf-refactored/src/: blocking.rs  bounds_check.rs  cache.rs  event_local.rs  fdtracking.rs  filter.rs  iterator_ext.rs  lib.rs  main.rs  maps.rs  path.rs  pipeline.rs  process_info.rs  programs.rs  relocation_helpers.rs  scratch.rs  signal.rs  syscalls.rs  task_ext.rs  task_info.rs  write.rs
rust/playground/ebpf-refactored/src/c/: relocation_helpers.c  relocation_helpers.h
rust/playground/ebpf-refactored/src/events/: blocking.rs  fdtracking.rs  mod.rs  signal.rs  write.rs
rust/playground/ebpf-relocation-helpers/: Cargo.toml  build.rs
rust/playground/ebpf-relocation-helpers/src/: lib.rs
rust/playground/ebpf-relocation-helpers/src/c/: relocation_helpers.h
rust/playground/ebpf-test-refactored/: Cargo.toml  build.rs  dump
rust/playground/ebpf-test-refactored/tests/: prog_test_run.rs
rust/playground/ebpf-types/: Cargo.toml
rust/playground/ebpf-types/src/: lib.rs
rust/playground/sendmsg-demo/: Cargo.toml
rust/playground/sendmsg-demo/src/: main.rs
rust/proto/: config.proto  counter.proto  ziofa.proto
rust/runner/: Cargo.toml
rust/runner/src/: client.rs  lib.rs  server.rs
rust/shared/: Cargo.toml  build.rs  shared.cdx.json
rust/shared/proto/: config.proto  counter.proto  events.proto  processes.proto  symbols.proto  ziofa.proto
rust/shared/src/: lib.rs  type_helper.rs
rust/uniffi-bindgen/: Cargo.toml
rust/uniffi-bindgen/src/: main.rs
rust/xtask/: Cargo.toml  xtask.cdx.json
rust/xtask/scripts/: adb_push_and_run.py
rust/xtask/src/: client.rs  daemon.rs  integration_test.rs  lib.rs  main.rs  run.rs  server.rs
rust/xtask/tests/: integration.rs
utils/: generate_sbom.py
(+242 files in other folders)
