# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
# SPDX-FileCopyrightText: 2024 Robin Seidl <robin.seidl@fau.de>
#
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = [
  "xtask",
  "backend/daemon",
  "backend/ebpf",
  "backend/common",
  "shared",
  "client",
  "playground/sendmsg-demo",
  "uniffi-bindgen",
]
default-members = [
  "xtask",
  "backend/daemon",
  "backend/common",
  "shared",
  "client",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/amosproj/amos2024ws03-android-zero-instrumentation"
edition = "2021"

[workspace.dependencies]
aya = { version = "0.13.0", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.18.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }
prost = "0.13.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tokio-stream = "0.1.16"
uniffi = { version = "0.28.2" }
thiserror = "2.0.3"
shared = { path = "./shared" }
xtask = { path = "./xtask" }
backend-common = { path = "./backend/common" }
backend-daemon = { path = "./backend/daemon" }
backend-ebpf = { path = "./backend/ebpf" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
procfs = "0.17.0"
async-broadcast = "0.7.1"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.9"
nix = "0.29.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.release.package.backend-ebpf]
debug = 2
codegen-units = 1
