# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
# SPDX-FileCopyrightText: 2024 Robin Seidl <robin.seidl@fau.de>
#
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = [
  "xtask",
  "backend/daemon",
  "backend/ebpf",
  "backend/common",
  "shared",
  "client",
  "playground/sendmsg-demo",
  "playground/ebpf-types",
  "playground/ebpf-test-refactored",
  "playground/ebpf-relocation-helpers",
  "playground/ebpf-refactored",
  "uniffi-bindgen", 
  "backend/ebpf-test",
  "runner",
  "garbage-collection",
]
default-members = [
  "xtask",
  "backend/daemon",
  "backend/common",
  "shared",
  "client",
]

[workspace.package]
license = "MIT"
repository = "https://github.com/amosproj/amos2024ws03-android-zero-instrumentation"
edition = "2021"

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
aya-log-common = "0.1.15"

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.19.1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.23", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.168", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.42.0", default-features = false }
which = { version = "7.0.0", default-features = false }
prost = "0.13.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tokio-stream = "0.1.17"
uniffi = { version = "0.28.3" }
thiserror = "2.0.6"
shared = { path = "./shared" }
xtask = { path = "./xtask" }
backend-common = { path = "./backend/common" }
backend-daemon = { path = "./backend/daemon" }
backend-ebpf = { path = "./backend/ebpf" }
runner = { path = "./runner" }
garbage-collection = { path = "./garbage-collection" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
procfs = "0.17.0"
async-broadcast = "0.7.1"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.9"
nix = "0.29.0"
object = "0.36.5"
bytemuck = { version = "1.20.0" }
crossbeam = "0.8.4"
ractor = { version = "0.13.4", default-features = false }
aya-obj = "0.2.1"
async-walkdir = "2.0.0"
tokio-process-stream = "0.4.0"
symbolic-demangle = { version = "12.12.3", default-features = false, features = ["cpp", "rust"] }
symbolic-common = "12.12.3"
tantivy = { version = "0.22.0", features = ["mmap", "zstd-compression"], default-features = false }
fmmap = { version = "0.3.3", default-features = false, features = ["tokio-async"] }
flume = { version = "0.11.1", default-features = false, features = ["async"] }
adb_client = "2.1.0"
ctrlc = "3.4.5"
rustix = { version = "0.38.43" }
tower = { version = "0.5.2" }
hyper-util = { version = "0.1.10", features = ["tokio"] }
clang = "2.0.0"
clang-sys = "1.8.1"
test-log = { version = "0.2.17", default-features = false, features = ["color", "log", "trace"] }
ebpf-types = { path = "./playground/ebpf-types" }
ebpf-relocation-helpers = { path = "./playground/ebpf-relocation-helpers" }
paste = "1.0.15"
bindgen = "0.71.1"
cc = "1.2.10"
syscall-numbers = "4.0.1"


[profile.release.package.backend-ebpf]
debug = 2
codegen-units = 1
