[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
shared = { path = "../shared" }
libc = { workspace = true }
tokio-stream = { workspace = true }
env_logger = {workspace = true}
log = {workspace = true}