# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Franz Schlicht <franz.schlicht@gmail.de>
# SPDX-FileCopyrightText: 2024 Robin Seidl <robin.seidl@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
shared = { path = "../shared" }
libc = { workspace = true }
tokio-stream = { workspace = true }
env_logger = {workspace = true}
log = {workspace = true}
serde_json = {workspace = true}
aya = {workspace = true}

[build-dependencies]
cargo_metadata = { workspace = true }
xtask = { path = "../xtask" }