# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
#
# SPDX-License-Identifier: MIT

[lib]
name = "client"
crate-type = ["cdylib", "rlib"]

[package]
name = "client"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
default-run = "client"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
shared = { workspace = true }

[features]
uniffi = [ "dep:uniffi" ]

[[bin]]
name = "client"
path = "src/bin/cli.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi", "uniffi/cli"]