# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
#
# SPDX-License-Identifier: MIT

[lib]
name = "client"
crate-type = ["cdylib", "rlib"]

[package]
name = "client"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true
default-run = "client"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true, features = ["tokio"] }
shared = { workspace = true }
clap = { workspace = true, optional = true, default-features = true, features = [
  "derive",
] }
chrono = { version = "0.4.39", features = ["clock"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }

[features]
uniffi = ["dep:uniffi", "shared/uniffi"]
cli = ["dep:clap", "tokio/rt-multi-thread", "tokio/signal", "tokio/fs", "tokio/sync"]

[[bin]]
name = "client"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[test]]
name = "base"
path = "./tests/base.rs"
