# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "example-common"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
