# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "shared"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
serde = {workspace = true}
serde_json = {workspace = true}

[build-dependencies]
tonic-build = { workspace = true }