# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Franz Schlicht <franz.schlicht@gmail.de>
# SPDX-FileCopyrightText: 2024 Robin Seidl <robin.seidl@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "backend-daemon"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "process", "fs"] }
shared = { workspace = true }
libc = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
aya = { workspace = true }
thiserror = { workspace = true }
backend-common = { workspace = true, features = ["user"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
procfs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aya-log = { workspace = true }
async-broadcast = { workspace = true }
object = { workspace = true }
serde = { workspace = true }
bytemuck = "1.20.0"
crossbeam = "0.8.4"
ractor = { version = "0.13.4", default-features = false, features = ["tokio_runtime"] }

[build-dependencies]
cargo_metadata = { workspace = true }
xtask = { workspace = true }

[[test]]
name = "base"
path = "./tests/base.rs"
