# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Franz Schlicht <franz.schlicht@gmail.de>
# SPDX-FileCopyrightText: 2024 Robin Seidl <robin.seidl@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "backend-daemon"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "process", "fs"] }
shared = { workspace = true }
libc = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
serde_json = { workspace = true }
aya = { workspace = true }
thiserror = { workspace = true }
backend-common = { workspace = true, features = ["user"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
procfs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
aya-log = { workspace = true }
async-broadcast = { workspace = true }
object = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }
bytemuck = { workspace = true }
ractor = { workspace = true, features = ["tokio_runtime"] }
async-walkdir = "2.0.0"
tokio-process-stream = "0.4.0"
symbolic-demangle = { version = "12.12.3", default-features = false, features = ["cpp", "rust"] }
symbolic-common = "12.12.3"
futures = "0.3.31"
tantivy = { version = "0.22.0", features = ["mmap", "zstd-compression"], default-features = false }
fmmap = { version = "0.3.3", default-features = false, features = ["tokio-async"] }
flume = { version = "0.11.1", default-features = false, features = ["async"] }

[build-dependencies]
cargo_metadata = { workspace = true }
xtask = { workspace = true }