# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "backend-ebpf-test"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
backend-common = { workspace = true }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

aya = { workspace = true }
libc = { workspace = true }
aya-obj = { workspace = true }

[build-dependencies]
which = { workspace = true }
cargo_metadata = { workspace = true }

[[test]]
name = "prog-test-run"
path = "tests/prog_test_run.rs"