# SPDX-FileCopyrightText: 2024 Benedikt Zinn <benedikt.wh.zinn@gmail.com>
# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2024 Luca Bretting <luca.bretting@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "backend-ebpf"
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
backend-common = { workspace = true }
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[features]
prog-test = []

[build-dependencies]
which = { workspace = true }
xtask = { workspace = true }

[[bin]]
name = "backend-ebpf"
path = "src/main.rs"