# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-refactored"
version = "0.1.0"
edition = "2021"

[lib]

[features]
bounds-check = []

[dependencies]
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log-common = { version = "0.1.15", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }
ebpf-types = { path = "../ebpf-types" }
relocation-helpers = { path = "../ebpf-relocation-helpers", package = "ebpf-relocation-helpers" }
syscall-numbers = "4.0.1"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
panic = "abort"
