# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-refactored"
version = "0.1.0"
edition = "2021"

[lib]

[features]
bounds-check = []

[dependencies]
aya-ebpf = { workspace = true }
aya-log-common = { workspace = true }
aya-log-ebpf = { workspace = true }
ebpf-types = { workspace = true }
ebpf-relocation-helpers = { workspace = true }
syscall-numbers = { workspace = true }