# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-relocation-helpers"
version = "0.1.0"
edition = "2024"

include = [
    "src/c/relocation_helpers.c",
    "src/c/relocation_helpers.h",
]
links = "relocation_helpers"

[dependencies]
aya-ebpf = "0.1.1"
paste = "1.0.15"

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = ["runtime"] }
cc = { version = "1.2.10", default-features = false }

