# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-relocation-helpers"
version = "0.1.0"
edition.workspace = true

include = [
    "src/c/relocation_helpers.c",
    "src/c/relocation_helpers.h",
]
links = "relocation_helpers"

[dependencies]
aya-ebpf = { workspace = true }
paste = { workspace = true }

[build-dependencies]
bindgen = { workspace = true, features = ["runtime"] }
cc = { workspace = true }

