# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-test-refactored"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.1"

[build-dependencies]

[dev-dependencies]
bytemuck = "1.21.0"
libc = { version = "0.2.169", default-features = false, features = ["std"] }
aya-obj = { version = "0.2.1", default-features = false, features = ["std"] }
aya = { version = "0.13.1", default-features = false, features = ["tokio"] }
aya-log = { version = "0.2.1", default-features = false }
test-log = { version = "0.2.17", default-features = false, features = ["color", "log", "trace"] }
tokio = { version = "1.43.0", default-features = false, features = ["macros", "net", "signal", "time"] }
ebpf-types = { path = "../ebpf-types", features = ["user"] }
