# SPDX-FileCopyrightText: 2024 Felix Hilgers <felix.hilgers@fau.de>
# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-test-refactored"
version = "0.1.0"
edition.workspace = true

[dev-dependencies]
aya-ebpf = { workspace = true }
bytemuck = { workspace = true }
libc = { workspace = true }
aya-obj = { workspace = true }
aya = { workspace = true, features = ["tokio"] }
aya-log = { workspace = true }
test-log = { workspace = true, features = ["color", "log", "trace"] }
tokio = { workspace = true, features = ["macros", "net", "signal", "time", "rt-multi-thread"] }
ebpf-types = { workspace = true, features = ["user"] }

[[test]]
name = "prog_test_run"
path = "tests/prog_test_run.rs"
test = true