# SPDX-FileCopyrightText: 2025 Felix Hilgers <felix.hilgers@fau.de>
#
# SPDX-License-Identifier: MIT

[package]
name = "ebpf-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
aya = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive"] }

[features]
user = ["dep:aya"]
